[gd_scene load_steps=4 format=3 uid="uid://lunnwx2d4v2s"]

[ext_resource type="Script" path="res://scripts/player_data_manager.gd" id="1"]
[ext_resource type="Theme" uid="uid://drsa2rro5tihp" path="res://asset/ui/generic_ui_theme.tres" id="2"]

[sub_resource type="LabelSettings" id="1"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.490196)

[node name="pdm" type="Node"]
script = ExtResource("1")

[node name="bad_version" type="Window" parent="."]
process_mode = 3
title = "Incompatible Save"
initial_position = 1
size = Vector2i(370, 275)
visible = false
transient = true
exclusive = true
unresizable = true
theme = ExtResource("2")
theme_override_constants/title_height = 32
theme_override_font_sizes/title_font_size = 20

[node name="margin" type="MarginContainer" parent="bad_version"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="v_box_container" type="VBoxContainer" parent="bad_version/margin"]
layout_mode = 2

[node name="1" type="Label" parent="bad_version/margin/v_box_container"]
layout_mode = 2
size_flags_vertical = 0
text = "The version on your save file is different than the version of this game."
label_settings = SubResource("1")
autowrap_mode = 3

[node name="version" type="Label" parent="bad_version/margin/v_box_container"]
layout_mode = 2
size_flags_vertical = 0
text = "
%s => %s
 "
label_settings = SubResource("1")
horizontal_alignment = 1

[node name="2" type="Label" parent="bad_version/margin/v_box_container"]
layout_mode = 2
size_flags_vertical = 0
text = "Normally, there would be a save file converter, but right now there isnt one. Unfortunately, your save will be deleted in order to properly play Newman Network: Channel 64. A backup will be created before your save is wiped and replaced."
label_settings = SubResource("1")
autowrap_mode = 3

[node name="accept" type="Button" parent="bad_version/margin/v_box_container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("2")
text = " I understand that my save will be deleted "

[connection signal="pressed" from="bad_version/margin/v_box_container/accept" to="." method="accept_bvwindow"]
